Style tons of minor corrections including features and stories top article having the wrong sized image.

--- a/photosnap-multi-page/starter-code/css/desktop.css
+++ b/photosnap-multi-page/starter-code/css/desktop.css
@@ -18,6 +18,20 @@ article {
     height: 600px;
 }
 
+.stories__article {
+    width: 387px;
+    height: 406px;
+    color: white;
+    background-color: transparent;
+    position: absolute;
+    left: 72px;
+    top: 70px;
+}
+
+.stories__article__para {
+    margin: 24px 0 0 0;
+}
+
 .article--black a:hover{
     text-decoration: underline;
     text-decoration-color: white;
@@ -26,6 +40,11 @@ article {
     text-decoration-color: black;
     text-decoration: underline;
 }
+
+.features__twoSquare img {
+    width: 830px;
+    height: 490px;
+  }
 
 /* STORIES */
 .stories {
@@ -73,4 +92,102 @@ figure:hover {
 .features__article--black {
     width: 610px;
     flex-shrink: 0;
+}
+
+/* PRICING PLANS */
+.price__plans {
+    margin-top: 40px;
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 470px;
+}
+
+.price__card {
+    width: 350px;
+    height: 407px;
+    background-color: #F5F5F5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.price__card h1 {
+    margin-top: 56px;
+    line-height: 25px;
+}
+
+.price__card p {
+    margin-top: 18px;
+    text-align: center;
+}
+
+.price__section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.price__card h2 {
+    margin-top: 40px;
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 48px;
+    letter-spacing: 4.17px;
+}
+
+.price__card h3 {
+    font-size: 15px;
+    font-weight: normal;
+    line-height: 25px;
+    letter-spacing: 0;
+    opacity: 0.6;
+}
+
+.price__card button {
+    margin-top: 40px;
+    width: 270px;
+    height: 40px;
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+.price__card button:hover, 
+.price__card--black button:hover {
+    background-color: #DFDFDF;
+    border-color: #ada1a1;
+    color: black;
+}
+
+.price__card--black {
+    background-color: black;
+    color: white;
+    height: 470px;
+}
+
+.price__card--black h1 {
+    margin-top: 86px;
+}
+
+.price__card--black button {
+    background-color: white;
+    color: black;
+}
+
+.price__section--hidden {
+    display: none;
+}
+
+/* FEATURES TABLE */
+.features__table--desktop table {
+    width: 731px;
+    width: 731px;
+    height: 552px;
+    margin: 56px auto 112px auto;
 }
